<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. by Michael "NiteKnight" Scheidl. Baden/AUSTRIA
  -->

<resources>
    <string name="app_name">yDMXClient</string>
    <string name="sliderRED">Red</string>
    <string name="sliderGREEN">Green</string>
    <string name="sliderBLUE">Blue</string>
    <string name="sliderDIMMER">DIMMER</string>
    <string name="btnCONNECT">Connect</string>
    <string name="btnDISCONNECT">Disconnect</string>
    <string name="RedLabel">Red</string>
    <string name="btnBLACKOUT">B/O</string>
</resources>
